bug 12009 - 'Find Concerts' button isn't visible on small windows (r=me)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10763 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/extensions/concerts/chrome/skin/overlay.css
+++ b/extensions/concerts/chrome/skin/overlay.css
@@ -27,6 +27,9 @@ description#library-text {
 	width: 5px;
 }
 
+#concerts-firstrun-page {
+	overflow: auto;
+}
 #concerts-firstrun-page menulist {
 	font-size: 130%;
 }
